# databricks-job-dev-harness

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  GEMINI.md  OVERVIEW.html  README.md  USAGE.md  databricks.yml  plugin.json  pyproject.toml
.agent/workflows/: 00-start-project.md  01-design-intake.md  02-design-check.md  03-implementation-plan.md  04-implement-task.md  05-test.md  06-release.md  07-retrospective.md  08-design-revise.md  09-harness-help.md  99-status.md
.claude/: README.md  settings.json
.claude/agents/: design-critic.md  reviewer.md  task-worker.md
.claude/commands/: 00-start-project.md  01-design-intake.md  02-design-check.md  03-implementation-plan.md  04-implement-task.md  05-test.md  06-release.md  07-retrospective.md  08-design-revise.md  09-harness-help.md  99-status.md
.claude/skills/databricks-deploy/: SKILL.md
.claude/skills/databricks-env-setup/: SKILL.md
.claude/skills/databricks-job-testing/: SKILL.md
.claude/skills/design-readiness-review/: SKILL.md
.claude/skills/gate-check/: SKILL.md
.claude/skills/harness-guide/: SKILL.md
.claude/skills/harness-retrospective/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/skill-authoring/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/agents/: design-critic.agent.md  design-gate.agent.md  implement.agent.md  orchestrator.agent.md  release.agent.md  reviewer.agent.md  task-worker.agent.md  test.agent.md
.github/hooks/: README.md  gate-hooks.json
.github/hooks/scripts/: guard-databricks-prod.ps1  guard-databricks-prod.sh  guard-harness-config-edit.ps1  guard-harness-config-edit.sh  guard-secret-leak.ps1  guard-secret-leak.sh  (+6 more)
.github/instructions/: bundles.instructions.md  design-docs.instructions.md  docs.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: 00-start-project.prompt.md  01-design-intake.prompt.md  02-design-check.prompt.md  03-implementation-plan.prompt.md  04-implement-task.prompt.md  05-test.prompt.md  06-release.prompt.md  07-retrospective.prompt.md  08-design-revise.prompt.md  09-harness-help.prompt.md  99-status.prompt.md
.github/workflows/: ci.yml  deploy.yml
docs/00-overview/: README.md  learnings_template.md  progress_template.md
docs/01-design/: README.md  design_index_template.md  environment_template.md  irr_template.md
docs/02-implementation/: tasks_template.md  traceability_template.md
docs/03-test/: security_review_report_template.md  test_plan_template.md  test_report_template.md
docs/04-release/: changelog_template.md  release_checklist_template.md  runbook_template.md
docs/05-retrospective/: retrospective_template.md
resources/: main.job.yml
samples/: README.md
samples/test-data/: sales_20260701.csv
scripts/: generate_agent_tooling.py
src/sample_job/: main.py
tests/integration/: test_placeholder.py
tests/unit/: test_main.py
(+13 files in other folders)
